--- a/attendance.html
+++ b/attendance.html
@@ -1,128 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mark Attendance</title>
-
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Attendance — Subject</title>
   <style>
-    body {
-      font-family: Poppins, sans-serif;
-      background: #eef3ff;
-      padding: 25px;
-    }
+    body{ font-family:Poppins, Inter, sans-serif; margin:0; padding:28px; background:#f6fbff; color:#07304f; }
+    .card{ max-width:900px; margin:18px auto; background:white; padding:18px; border-radius:12px; box-shadow:0 8px 30px rgba(8,24,50,0.06); }
+    h1{ margin:0 0 6px 0; font-size:20px; }
+    .meta{ color:#234a6f; font-size:14px; margin-bottom:12px; }
+    .hint{ color:#234a6f; font-size:13px; margin-bottom:10px; opacity:0.9; }
 
-    h2 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
+    /* basic attendance table for quick demo */
+    table{ width:100%; border-collapse:collapse; margin-top:12px; }
+    th,td{ padding:10px; border-bottom:1px solid rgba(10,30,60,0.06); text-align:left; }
+    .actions{ display:flex; gap:8px; margin-top:10px; }
+    .btn{ padding:8px 12px; border-radius:8px; border:none; cursor:pointer; font-weight:700; }
+    .btn-save{ background:#2e7d32; color:white; }
+    .btn-clear{ background:#c62828; color:white; }
 
-    .box {
-      max-width: 450px;
-      margin: auto;
-      background: white;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 3px 10px rgba(0,0,0,0.1);
-    }
+    .empty{ color:#6b879f; font-size:14px; padding:18px 0; }
 
-    label { font-weight: 600; }
+    /* small form row */
+    .row{ display:flex; gap:8px; margin-top:10px; }
+    input[type="text"]{ padding:8px 10px; border-radius:8px; border:1px solid rgba(10,30,60,0.06); flex:1; }
 
-    input {
-      width: 100%;
-      padding: 10px;
-      margin: 8px 0 15px;
-      border-radius: 8px;
-      border: 1px solid #bbb;
-    }
-
-    .radio-box {
-      display: flex;
-      gap: 20px;
-      margin-bottom: 15px;
-    }
-
-    button {
-      width: 100%;
-      padding: 12px;
-      background: #1976d2;
-      border: none;
-      color: white;
-      border-radius: 8px;
-      cursor: pointer;
-      font-size: 16px;
-    }
-
-    button:hover {
-      background: #0d47a1;
-    }
   </style>
 </head>
-
 <body>
 
-  <h2 id="subjectTitle">Attendance</h2>
+  <div class="card">
+    <h1 id="title">Attendance</h1>
+    <div class="meta" id="meta">Subject: — &nbsp; | &nbsp; Teacher: —</div>
+    <div class="hint">This is a starter attendance page. Use the student list below to mark present/absent. (Local demo — adapt for storage as needed.)</div>
 
-  <div class="box">
-    <label>Student Name</label>
-    <input type="text" id="studentName" placeholder="Enter student name">
-
-    <label>Roll Number</label>
-    <input type="number" id="roll" placeholder="Enter roll no">
-
-    <label>Attendance</label>
-    <div class="radio-box">
-      <label><input type="radio" name="status" value="Present"> Present</label>
-      <label><input type="radio" name="status" value="Absent"> Absent</label>
+    <div class="row">
+      <input id="rollInput" placeholder="Enter student roll no (e.g. 21/001)" />
+      <input id="nameInput" placeholder="Student name" />
+      <button class="btn btn-save" id="addBtn">Add Student</button>
     </div>
 
-    <button onclick="saveAttendance()">Submit</button>
+    <div id="listWrap">
+      <div class="empty">No students added. Add a student to start marking attendance.</div>
+    </div>
+
+    <div class="actions">
+      <button class="btn btn-save" id="saveLocal">Save to localStorage</button>
+      <button class="btn btn-clear" id="clearAll">Clear All</button>
+    </div>
   </div>
 
-
   <script>
-    // Read subject from URL
+    // parse URL params
     const params = new URLSearchParams(window.location.search);
-    const subject = params.get("sub");
+    const subject = params.get('sub') || 'Unknown Subject';
+    const teacher = params.get('teacher') || 'Unknown Teacher';
 
-    if (subject) {
-      document.getElementById("subjectTitle").innerText =
-        subject + " - Attendance";
-    }
+    document.getElementById('title').innerText = `${subject} — Attendance`;
+    document.getElementById('meta').innerText = `Subject: ${subject}  |  Teacher: ${teacher}`;
 
-    // Save attendance into localStorage
-    function saveAttendance() {
-      const name = document.getElementById("studentName").value.trim();
-      const roll = document.getElementById("roll").value.trim();
-      const statusOption = document.querySelector("input[name='status']:checked");
+    const listWrap = document.getElementById('listWrap');
+    const rollInput = document.getElementById('rollInput');
+    const nameInput = document.getElementById('nameInput');
+    const addBtn = document.getElementById('addBtn');
 
-      if (!name || !roll || !statusOption) {
-        alert("Please fill all fields.");
+    let students = []; // {roll, name, present: true/false}
+
+    function renderList(){
+      if(students.length === 0){
+        listWrap.innerHTML = '<div class="empty">No students added. Add a student to start marking attendance.</div>';
         return;
       }
-
-      const status = statusOption.value;
-      const today = new Date().toLocaleDateString();
-
-      const record = {
-        name: name,
-        roll: roll,
-        status: status,
-        date: today
-      };
-
-      const key = "attendance_" + subject;
-      const oldData = JSON.parse(localStorage.getItem(key)) || [];
-      oldData.push(record);
-
-      localStorage.setItem(key, JSON.stringify(oldData));
-
-      alert("Attendance saved!");
-      document.getElementById("studentName").value = "";
-      document.getElementById("roll").value = "";
-      statusOption.checked = false;
+      let html = '<table><thead><tr><th>Roll</th><th>Name</th><th>Status</th><th>Action</th></tr></thead><tbody>';
+      students.forEach((s, idx)=>{
+        html += `<tr>
+          <td>${escapeHtml(s.roll)}</td>
+          <td>${escapeHtml(s.name)}</td>
+          <td>${s.present ? 'Present' : 'Absent'}</td>
+          <td>
+            <button onclick="toggle(${idx})">Toggle</button>
+            <button onclick="remove(${idx})" style="margin-left:8px;color:#c62828">Remove</button>
+          </td>
+        </tr>`;
+      });
+      html += '</tbody></table>';
+      listWrap.innerHTML = html;
     }
-  </script>
 
+    function escapeHtml(text){ return String(text).replace(/[&<>"']/g, function(m){ return ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'})[m]; }); }
+
+    addBtn.addEventListener('click', ()=>{
+      const roll = (rollInput.value||'').trim();
+      const name = (nameInput.value||'').trim();
+      if(!roll || !name) return alert('Enter roll and name');
+      // prevent duplicate roll
+      if(students.some(s=>s.roll === roll)) return alert('Roll already added.');
+      students.push({roll, name, present: true});
+      rollInput.value=''; nameInput.value='';
+      renderList();
+    });
+
+    window.toggle = function(idx){
+      students[idx].present = !students[idx].present;
+      renderList();
+    }
+
+    window.remove = function(idx){
+      students.splice(idx,1);
+      renderList();
+    }
+
+    // small localStorage key per subject+teacher
+    const storageKey = `attendance::${subject}::${teacher}`;
+
+    document.getElementById('saveLocal').addEventListener('click', ()=>{
+      localStorage.setItem(storageKey, JSON.stringify(students));
+      alert('Saved to localStorage.');
+    });
+
+    document.getElementById('clearAll').addEventListener('click', ()=>{
+      if(!confirm('Clear all student records for this session?')) return;
+      students = [];
+      localStorage.removeItem(storageKey);
+      renderList();
+    });
+
+    // load existing if any
+    (function(){
+      const raw = localStorage.getItem(storageKey);
+      if(raw){
+        try{ students = JSON.parse(raw) || []; }catch(e){ students = []; }
+      }
+      renderList();
+    })();
+  </script>
 </body>
 </html>
