--- a/attendance.html
+++ b/attendance.html
@@ -1,138 +1,92 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Attendance — Subject</title>
-  <style>
-    body{ font-family:Poppins, Inter, sans-serif; margin:0; padding:28px; background:#f6fbff; color:#07304f; }
-    .card{ max-width:900px; margin:18px auto; background:white; padding:18px; border-radius:12px; box-shadow:0 8px 30px rgba(8,24,50,0.06); }
-    h1{ margin:0 0 6px 0; font-size:20px; }
-    .meta{ color:#234a6f; font-size:14px; margin-bottom:12px; }
-    .hint{ color:#234a6f; font-size:13px; margin-bottom:10px; opacity:0.9; }
+<script>
+  // parse URL params
+  const params = new URLSearchParams(window.location.search);
+  const subject = params.get('sub') || 'Unknown Subject';
+  const teacher = params.get('teacher') || 'Unknown Teacher';
 
-    /* basic attendance table for quick demo */
-    table{ width:100%; border-collapse:collapse; margin-top:12px; }
-    th,td{ padding:10px; border-bottom:1px solid rgba(10,30,60,0.06); text-align:left; }
-    .actions{ display:flex; gap:8px; margin-top:10px; }
-    .btn{ padding:8px 12px; border-radius:8px; border:none; cursor:pointer; font-weight:700; }
-    .btn-save{ background:#2e7d32; color:white; }
-    .btn-clear{ background:#c62828; color:white; }
+  document.getElementById('title').innerText = `${subject} — Attendance`;
+  document.getElementById('meta').innerText = `Subject: ${subject}  |  Teacher: ${teacher}`;
 
-    .empty{ color:#6b879f; font-size:14px; padding:18px 0; }
+  const listWrap = document.getElementById('listWrap');
+  const rollInput = document.getElementById('rollInput');
+  const nameInput = document.getElementById('nameInput');
+  const addBtn = document.getElementById('addBtn');
 
-    /* small form row */
-    .row{ display:flex; gap:8px; margin-top:10px; }
-    input[type="text"]{ padding:8px 10px; border-radius:8px; border:1px solid rgba(10,30,60,0.06); flex:1; }
+  let students = []; // full attendance entries
 
-  </style>
-</head>
-<body>
-
-  <div class="card">
-    <h1 id="title">Attendance</h1>
-    <div class="meta" id="meta">Subject: — &nbsp; | &nbsp; Teacher: —</div>
-    <div class="hint">This is a starter attendance page. Use the student list below to mark present/absent. (Local demo — adapt for storage as needed.)</div>
-
-    <div class="row">
-      <input id="rollInput" placeholder="Enter student roll no (e.g. 21/001)" />
-      <input id="nameInput" placeholder="Student name" />
-      <button class="btn btn-save" id="addBtn">Add Student</button>
-    </div>
-
-    <div id="listWrap">
-      <div class="empty">No students added. Add a student to start marking attendance.</div>
-    </div>
-
-    <div class="actions">
-      <button class="btn btn-save" id="saveLocal">Save to localStorage</button>
-      <button class="btn btn-clear" id="clearAll">Clear All</button>
-    </div>
-  </div>
-
-  <script>
-    // parse URL params
-    const params = new URLSearchParams(window.location.search);
-    const subject = params.get('sub') || 'Unknown Subject';
-    const teacher = params.get('teacher') || 'Unknown Teacher';
-
-    document.getElementById('title').innerText = `${subject} — Attendance`;
-    document.getElementById('meta').innerText = `Subject: ${subject}  |  Teacher: ${teacher}`;
-
-    const listWrap = document.getElementById('listWrap');
-    const rollInput = document.getElementById('rollInput');
-    const nameInput = document.getElementById('nameInput');
-    const addBtn = document.getElementById('addBtn');
-
-    let students = []; // {roll, name, present: true/false}
-
-    function renderList(){
-      if(students.length === 0){
-        listWrap.innerHTML = '<div class="empty">No students added. Add a student to start marking attendance.</div>';
-        return;
-      }
-      let html = '<table><thead><tr><th>Roll</th><th>Name</th><th>Status</th><th>Action</th></tr></thead><tbody>';
-      students.forEach((s, idx)=>{
-        html += `<tr>
-          <td>${escapeHtml(s.roll)}</td>
-          <td>${escapeHtml(s.name)}</td>
-          <td>${s.present ? 'Present' : 'Absent'}</td>
-          <td>
-            <button onclick="toggle(${idx})">Toggle</button>
-            <button onclick="remove(${idx})" style="margin-left:8px;color:#c62828">Remove</button>
-          </td>
-        </tr>`;
-      });
-      html += '</tbody></table>';
-      listWrap.innerHTML = html;
+  function renderList(){
+    if(students.length === 0){
+      listWrap.innerHTML = '<div class="empty">No students added. Add a student to start marking attendance.</div>';
+      return;
     }
+    let html = '<table><thead><tr><th>Roll</th><th>Name</th><th>Status</th><th>Action</th></tr></thead><tbody>';
+    students.forEach((s, idx)=>{
+      html += `<tr>
+        <td>${escapeHtml(s.roll)}</td>
+        <td>${escapeHtml(s.name)}</td>
+        <td>${s.status}</td>
+        <td>
+          <button onclick="toggle(${idx})">Toggle</button>
+          <button onclick="remove(${idx})" style="margin-left:8px;color:#c62828">Remove</button>
+        </td>
+      </tr>`;
+    });
+    html += '</tbody></table>';
+    listWrap.innerHTML = html;
+  }
 
-    function escapeHtml(text){ return String(text).replace(/[&<>"']/g, function(m){ return ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'})[m]; }); }
+  function escapeHtml(text){ return String(text).replace(/[&<>"']/g, function(m){ return ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'})[m]; }); }
 
-    addBtn.addEventListener('click', ()=>{
-      const roll = (rollInput.value||'').trim();
-      const name = (nameInput.value||'').trim();
-      if(!roll || !name) return alert('Enter roll and name');
-      // prevent duplicate roll
-      if(students.some(s=>s.roll === roll)) return alert('Roll already added.');
-      students.push({roll, name, present: true});
-      rollInput.value=''; nameInput.value='';
-      renderList();
+  addBtn.addEventListener('click', ()=>{
+    const roll = (rollInput.value||'').trim();
+    const name = (nameInput.value||'').trim();
+    if(!roll || !name) return alert('Enter roll and name');
+
+    const today = new Date().toLocaleDateString('en-IN');
+
+    students.push({
+      roll,
+      name,
+      subject,
+      teacher,
+      date: today,
+      status: "Present"
     });
 
-    window.toggle = function(idx){
-      students[idx].present = !students[idx].present;
-      renderList();
+    rollInput.value='';
+    nameInput.value='';
+    renderList();
+  });
+
+  window.toggle = function(idx){
+    students[idx].status = (students[idx].status === "Present") ? "Absent" : "Present";
+    renderList();
+  }
+
+  window.remove = function(idx){
+    students.splice(idx,1);
+    renderList();
+  }
+
+  const storageKey = `attendance::${subject}::${teacher}`;
+
+  document.getElementById('saveLocal').addEventListener('click', ()=>{
+    localStorage.setItem(storageKey, JSON.stringify(students));
+    alert('Saved to localStorage.');
+  });
+
+  document.getElementById('clearAll').addEventListener('click', ()=>{
+    if(!confirm('Clear all student records for this session?')) return;
+    students = [];
+    localStorage.removeItem(storageKey);
+    renderList();
+  });
+
+  (function(){
+    const raw = localStorage.getItem(storageKey);
+    if(raw){
+      try{ students = JSON.parse(raw) || []; }catch(e){ students = []; }
     }
-
-    window.remove = function(idx){
-      students.splice(idx,1);
-      renderList();
-    }
-
-    // small localStorage key per subject+teacher
-    const storageKey = `attendance::${subject}::${teacher}`;
-
-    document.getElementById('saveLocal').addEventListener('click', ()=>{
-      localStorage.setItem(storageKey, JSON.stringify(students));
-      alert('Saved to localStorage.');
-    });
-
-    document.getElementById('clearAll').addEventListener('click', ()=>{
-      if(!confirm('Clear all student records for this session?')) return;
-      students = [];
-      localStorage.removeItem(storageKey);
-      renderList();
-    });
-
-    // load existing if any
-    (function(){
-      const raw = localStorage.getItem(storageKey);
-      if(raw){
-        try{ students = JSON.parse(raw) || []; }catch(e){ students = []; }
-      }
-      renderList();
-    })();
-  </script>
-</body>
-</html>
+    renderList();
+  })();
+</script>
